# letter-boxed-solver

./: .coveragerc  .gitignore  README.md  gameboards.txt  pyproject.toml  requirements-dev.txt  settings
.github/workflows/: codeql.yml  python-package.yml  sphinx.yml
docs/source/: api.rst  conf.py  index.rst  license.rst  readme.rst
lbsolver/: lbsolver.py
src/lbsolver/: lbsolver.py
tests/: test_gameboard.py  test_lbsolver.py
