[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lbsolver"
version = "0.9.0"
authors = [{name="Derik Pack"},]
description = "A package containing a solver for the NYT Letter Boxed Game"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
lbsolver = "lbsolver.lbsolver:main"
